[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Entity/Jellyfish_Body.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character/Jellyfish.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Effects/Jelly_Tentacle.gd" type="Script" id=3]
[ext_resource path="res://Other/Jellyfish_Width_Curve.tres" type="Curve" id=4]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=6]
[ext_resource path="res://Other/Game_UI_Theme.tres" type="Theme" id=7]
[ext_resource path="res://Audio/jellyfishHit.mp3" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 16, 16, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 7.5
linear_accel_random = 1.0
radial_accel = 0.06
scale = 0.35
scale_random = 0.3
scale_curve = SubResource( 11 )
color = Color( 1, 1, 1, 0.784314 )
hue_variation = 0.15

[sub_resource type="Curve" id=2]
max_value = 2.0
_data = [ Vector2( 0.152381, 0 ), 0.0, 21.266, 0, 0, Vector2( 0.157143, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.344142, 0.0, 0, 0 ]

[node name="E_Jellyfish" type="KinematicBody2D" groups=["collide"]]
z_index = 5
collision_layer = 8193
collision_mask = 24
script = ExtResource( 2 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 6 )]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Hitbox_Shape" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( -25, 9, 25, 9, 30, 4, 22, -15, 0, -21, -22, -15, -30, 4 )

[node name="Stinger_Collision_1" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24, 4, 24, 4, 18, 67, 0, 105, -18, 67 )

[node name="Bullet_Bounce" type="StaticBody2D" parent="." groups=["collide"]]
collision_layer = 4202497
collision_mask = 4194331
physics_material_override = SubResource( 1 )

[node name="Collision_1" type="CollisionPolygon2D" parent="Bullet_Bounce"]
scale = Vector2( 0.9, 0.9 )
polygon = PoolVector2Array( -25, 9, 25, 9, 30, 4, 22, -15, 0, -21, -22, -15, -30, 4 )

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 524290
z_index = -4
amount = 5
lifetime = 2.5
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 524290
position = Vector2( 0, -6 )
scale = Vector2( 0.492064, 0.533333 )
z_index = 2
texture = ExtResource( 1 )

[node name="Background_Tentacle" type="Line2D" parent="."]
light_mask = 524290
position = Vector2( 0, 1.43051e-06 )
z_index = -2
width_curve = SubResource( 2 )
default_color = Color( 0.592157, 0.141176, 0.141176, 1 )
joint_mode = 2
script = ExtResource( 3 )

[node name="Tentacle_1" type="Line2D" parent="."]
show_behind_parent = true
light_mask = 524290
position = Vector2( 0, 9.53674e-07 )
z_index = -1
width_curve = ExtResource( 4 )
default_color = Color( 0.960784, 0.494118, 0.494118, 1 )
joint_mode = 2
script = ExtResource( 3 )

[node name="Tentacle_2" type="Line2D" parent="."]
show_behind_parent = true
light_mask = 524290
position = Vector2( 0, 1.43051e-06 )
z_index = -1
width_curve = ExtResource( 4 )
default_color = Color( 0.960784, 0.494118, 0.494118, 1 )
joint_mode = 2
script = ExtResource( 3 )

[node name="Tentacle_3" type="Line2D" parent="."]
show_behind_parent = true
light_mask = 524290
position = Vector2( 0, 9.53674e-07 )
z_index = -1
width_curve = ExtResource( 4 )
default_color = Color( 0.960784, 0.494118, 0.494118, 1 )
joint_mode = 2
script = ExtResource( 3 )

[node name="Health_Bar" type="ProgressBar" parent="."]
light_mask = 0
margin_left = -36.0
margin_top = -40.0
margin_right = 35.0
margin_bottom = -26.0
theme = ExtResource( 7 )
value = 50.0
percent_visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
area_mask = 0

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
